<resources>
    <string name="app_name">თავს ვანებებ თამბაქოს</string>
    <string name="lbl_days_smokefree">დღეები თამბაქოს გარეშე</string>
    <string name="access_smokefree_btn_desc">დღეს საერთოდ არ მომიწევია!</string>
    <string name="access_slipped_btn_desc">თავი ვერ შევიკავე და მოვწიე</string>
    <string name="header_reason_quiting">რატომ ვანებებ მოწევას თავს</string>
    <string name="header_quitism">თამბაქოსთვის თავის დანებება</string>
    <string name="access_track_craving">მოწევის ძლიერი სურვილის მონიტორინგი</string>
    <string name="access_reason_quit_img">სურათი</string>
    <string name="access_logo">თამბაქოსათვის თავის დანებების მობილური აპლიკაცია</string>
    <string name="learn_to_quit">ისწავლე როგორ დაანებო თავი თამბაქოს</string>
    <string name="intro_welcome">კეთილი იყოს თქვენი მობრძანება</string>
    <string name="intro_get_started">მოდი, დავიწყოთ!</string>
    <string name="access_select_quitdate">შეარჩიე მოწევისთვის თავის დანებების თარიღი</string>
    <string name="lbl_quit_date">მოწევისთვის თავის დანებების შენს მიერ შერჩეული თარიღია:</string>
    <string name="lbl_two_weeks">თავის დანებების თარიღად შეარჩიეთ ნებისმიერი დღე უახლოესი 2 კვირის განმავლობაში </string>
    <string name="access_share">გააზიარე</string>
    <string name="lbl_optional">ნებაყოფლობითი</string>
    <string name="lbl_intro_reason">რა არის თამბაქოსთვის თავის დანებების თქვენი მიზეზი?</string>
    <string name="access_continue">გააგრძელე</string>
    <string name="lbl_how_often">რა სიხშირით ეწევით?</string>
    <string name="btn_lbl_select_quitdate">შეარჩიე მოწევისთვის თავის დანებების თარიღი</string>
    <string name="lbl_how_many">რამდენ ღერს ეწევით დღეში?</string>
    <string name="lbl_when_craving">როდის გაქვს მოწევის ყველაზე ძლიერი სურვილი?</string>
    <string name="lbl_price_pack">რა თანხას ხარჯავ ერთი კოლოფი სიგარეტის შესაძენად?</string>
    <string name="lbl_back">უკან</string>
    <string name="access_pictue">მიზეზები თავის დასანებებლად (ფოტოები)</string>
    <string name="access_upload_photo">ატვირთეთ ფოტოები</string>
    <string name="hint_reason_quitting">გააკეთეთ მოკლე ჩანაწერი, რომელიც შეგახსენებთ მოწევისთვის თავის დანებების თქვენს მიზეზს</string>
    <string name="lbl_done">შესრულებულია</string>
    <string name="access_reason_edit_text">შეიყვანეთ მოწევისთვის თავის დანებების მიზეზი</string>
    <string name="access_left_drawer_item">ჩამონათვალი</string>
    <string name="menu_drawer_lbl_home">მთავარი</string>
    <string name="menu_drawer_lbl_quitplan">თავის დანებების გრაფიკი</string>
    <string name="menu_drawer_lbl_myhistory">ისტორია</string>
    <string name="menu_drawer_lbl_journal">ჟურნალები</string>
    <string name="menu_drawer_lbl_quitguide">როგორ დავანებო მოწევს თავი</string>
    <string name="menu_drawer_lbl_settings">პარამეტრები</string>
    <string name="lbl_my_quit_date">მოწევისთვის თავის დანებების ჩემს მიერ შერჩეული დღე</string>
    <string name="lbl_saved_time">შენ საკუთარი თავი გადაარჩინე!</string>
    <string name="access_trophy">ჯილდო</string>
    <string name="how_to_quit">როგორ დავანებო მოწევს თავი</string>
    <string name="header_your_quit_plan">მოწევისათვის თავის დანებების შენი გრაფიკი</string>
    <string name="access_share_quit_date">გააზიარე მოწევისთვის თავის დანებების შენი თარიღი</string>
    <string name="access_reset_profile">შეცვალე შენი პროფილი </string>
    <string name="access_track_progress">პროგრესის მონიტორინგი </string>
    <string name="access_reasons_smokefree">თამბქოსგან გათავისუფლების მიზეზები</string>
    <string name="header_track_monitor">პროგრესის მონიტორინგი</string>
    <string name="header_reason_quitting">მოწევისთვის თავის დანებების შენი მიზეზი:</string>
    <string name="access_back_arrow">უკან</string>
    <string name="header_lbl_back">უკან</string>
    <string name="header_quitdate">მოწევისთვის თავის დანებების შენი თარიღია:</string>
    <string name="header_good_work">გააგრძელე კარგად დაწყებული საქმე!</string>
    <string name="access_view_stats">ჩემი სტატუსის მიმოხილვა</string>
    <string name="access_view_history">ჩემი ისტორიის მიმოხილვა</string>
    <string name="access_close">დახურვა</string>
    <string name="slipped_isnt_easy">ვიცით, ეს არ არის ადვილი</string>
    <string name="slipped_triggered">რამ გამოიწვია გრაფიკის დარღვევა?</string>
    <string name="default_trigger">აირჩიე</string>
    <string name="access_keep_going">Keep going</string>
    <string name="access_new_quitdate">მონიშნე მოწევისთვის თავის დანებების ახალი დღე</string>
    <string name="header_craving">მოწევის წყურვილი</string>
    <string name="craving_strength">რამდენად ძლიერია მოწევის წყურვილი?</string>
    <string name="craving_trigger">Did something trigger you to slip?</string>
    <string name="manage_mood">მართე შენი განწყობა</string>
    <string name="access_happy">ბედნიერი</string>
    <string name="access_excited">აღფრთოვანებული</string>
    <string name="access_relaxed">მშვიდი</string>
    <string name="access_angry">გაბრაზებული</string>
    <string name="access_anxious">შეშფოთებული</string>
    <string name="access_frustrated">იმედგაცრუებული</string>
    <string name="access_nervous">აღელვებული</string>
    <string name="access_sad">მოწყენილი</string>
    <string name="access_stressed">სტრესული</string>
    <string name="header_remember_this_moment">დაიმახსოვრე ეს წამი!</string>
    <string name="access_take_photo">გადაიღე ფოტო</string>
    <string name="access_write_yourself_note">მიწერე საკუთარ თავს</string>
    <string name="access_journal">ჟურნალი</string>
    <string name="header_manage_mood">მართე საკუთარი განწყობა</string>
    <string name="lbl_what_whould_you_like">რის გაკეთებას ისურვებდი?</string>
    <string name="hint_short_note">მოკლე ჩანაწერი</string>
    <string name="desc_write_note">მიწერე საკუთარ თავს და შეახსენე რა შეიცვალა</string>
    <string name="header_write_note">გააკეთე ჩანაწერი </string>
    <string name="btn_continue">გააგრძელე</string>
    <string name="btn_add_new_entry">ახალი ჩანაწერის დამატება</string>
    <string name="header_saved_journals">ჟურნალში დამახსოვრებული ჩანაწერები</string>
    <string name="menu_drawer_lbl_myjournals">ჟურნალი</string>
    <string name="hint_title">სათაური</string>
    <string name="btn_save">დამახსოვრება</string>
    <string name="title_journal">ჟურნალი</string>
    <string name="reset_profile">შეცვალე შენი პროფილი </string>
    <string name="local_notifications">შეტყობინება ადგილის/დროის შესახებ</string>
    <string name="participant_id">მონაწილის საიდენტიფიკაციო ნომერი</string>
    <string name="version">ვერსია</string>
    <string name="about">შესახებ</string>
    <string name="access_right_arrow">მარჯვენა ისარი</string>
    <string name="send_feedback">უკუკავშირი</string>
    <string name="settings">პარამეტრები</string>
    <string name="notifications">შეტყობინებები</string>
    <string name="application">აპლიკაცია</string>
    <string name="version_name">2.0.0</string>
    <string name="email_addr_send_feedback">smokefreeteam@icfi.com</string>
    <string name="email_subject_send_feedback">აპლიკაციის 2.0. უკუკავშირი</string>
    <string name="btn_delete">წაშლა</string>
    <string name="header_about_quitguide">ინფორმაცია აპლიკაციის შესახებ</string>
    <string name="p1_about_quitguide">QuitGuide is a free smartphone app that can help you track your cravings and moods, monitor your progress toward achieving smokefree milestones, identify your reasons for quitting, identify smoking triggers and develop strategies to deal with them, provide guidance on quitting smoking, and a variety of other strategies to help you successfully become and stay smokefree.</string>
    <string name="p2_about_quitguide">QuitGuide provides tips to use during cravings. Use these tips to help you manage your mood and stay smokefree. To get more tips and support, you can also visit the smokefree.gov website.</string>
    <string name="p3_about_quitguide">QuitGuide is a product of Smokefree.gov (SfG)—a smoking cessation resource created by the Tobacco Control Research Branch at the National Cancer Institute in collaboration with tobacco control professionals and smoking cessation experts and with input from ex-smokers.</string>
    <string name="header_about_privacy">Privacy</string>
    <string name="p1_about_privacy">The National Cancer Institute’s (“NCI”) Tobacco Control Research Branch maintains the QuitGuide application and respects the privacy of users of the QuitGuide application. This is why we have taken the time to disclose our privacy policy and information collection practices. NCI will not disclose, sell, transfer, or share users’ personally identifiable information without user consent or unless required to do so by law. NCI automatically collects information about the use of QuitGuide for statistical purposes, that is, to measure the numbers of users. This information may be helpful when considering changes that improve our applications for future users. NCI reserves the right to share de-identified information about QuitGuide usage with research partners. QuitGuide allows users to share information on Twitter or by email. NCI cannot guarantee the privacy or security of information users provide to linked external websites.</string>
    <string name="p2_about_privacy">NCI staff posts news and other items of interest to users on the Smokefree Facebook page. If you have a Facebook account or \"Like\" the SfG Facebook page, you can post comments or click on the \"like\" option for individual entries. If you comment or click on the \"like\" button, personally identifying information will be visible to NCI staff and other Facebook site visitors. The amount of visible personal information will depend on your own Facebook privacy settings. You can avoid displaying any personally identifiable information by not creating an account, not posting comments, and not clicking on the \"like\" options in Facebook.</string>
    <string name="p3_about_privacy">NCI staff does not collect, use, or disclose any information about visitors who comment or \"like\" the SfG Facebook site. Facebook collects and reports on non-personally identifiable information about activities on Facebook pages. This information is password-protected and only available to NCI managers, members of the NCI communications and web teams, and other designated staff who require this information to perform their duties (see Facebook Privacy Policy at http://www.facebook.com/policy.php).</string>
    <string name="header_about_terms">Terms and Conditions</string>
    <string name="days_sun">კვი</string>
    <string name="days_mon">ორშ</string>
    <string name="days_tue">სამ</string>
    <string name="days_wed">ოთხ</string>
    <string name="days_thu">ხუთ</string>
    <string name="days_fri">პარ</string>
    <string name="days_sat">შაბ</string>
    <string name="access_your_quitdate">მოწევისათვის თავის დანებების შენი თარიღი</string>
    <string name="access_tips_and_distractions">რჩევები და ხელის შემშლელი ფაქტორები</string>
    <string name="access_view_notes_and_photos">ჩანაწერების და სურათების დათვალიერება</string>
    <string name="access_call_a_friend"> დაუკავშირდი მეგობარს</string>
    <string name="whats_new">რა არის ახალი?</string>
    <string name="tv1_whats_new">მოწევის ძლიერი სურვილის გაჩენა ან სიგარეტზე ხელის წაცდენა რაიმე განსაკუთრებულ ადგილას ან დროს ხდება? </string>
    <string name="tv2_whats_new">შეგიძლიათ მონიშნოთ ეს ადგილები და დროის მონაკვეთები; და მიიღოთ რჩევები მათ დასაძლევად</string>
    <string name="tv3_whats_new">მოწევის ძლიერი სურვილის გაჩენისას ან სიგარეტზე ხელის წაცდენისას მოძებნეთ ქვემოთ არსებული ღილაკების მსგავსი</string>
    <string name="access_help_time">დამეხმარე ამ დროს ხვალ</string>
    <string name="access_help_location">დამეხმარე შემდგომში, როცა ამავე ადგილას აღმოვჩნდები</string>
    <string name="btn_help_time">დახმარება კონკრეტულ დროს</string>
    <string name="btn_help_location">დახმარება კონკრეტულ ადგილზე ყოფნის დროს</string>
</resources>