<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:id="@+id/header_history_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_normal"
        style="@style/ContentHeaderWhiteLarge" />

    <LinearLayout android:id="@+id/headers_history_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_history_calendar"
        android:weightSum="7"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_sun"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_mon"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_tue"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_wed"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_thu"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_fri"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            style="@style/ContentHeaderWhite"
            android:gravity="center"
            android:text="@string/days_sat"
            android:textAllCaps="true"/>

    </LinearLayout>

    <GridView android:id="@+id/grid_view_calendar"
        android:layout_below="@+id/headers_history_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:numColumns="7">

    </GridView>

</RelativeLayout>